[package]
name = "bcopy-performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = ">= 0.4, < 0.4.2"
si-scale = "0.1.5"
rayon = "1.5"
conv = "0.3.3"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
